export interface Specialization {
    denomination:string
}